update to gradle 4.9 and related fixes