@@ -17,9 +17,14 @@
 
 package com.google.cloud.tools.gradle.appengine;
 
-import com.google.common.collect.FluentIterable;
+import java.io.BufferedReader;
+import java.io.StringReader;
+import java.nio.Buffer;
 import java.util.List;
+import java.util.function.Predicate;
+import java.util.stream.Collectors;
 import org.gradle.testkit.runner.BuildResult;
+import org.gradle.testkit.runner.BuildTask;
 
 /** ToolsExtension to filter gradle test kit runner results. */
 public class BuildResultFilter {
@@ -27,8 +32,9 @@ public class BuildResultFilter {
   /** Extract task as a list of path strings. */
   public static List<String> extractTasks(BuildResult buildResult) {
 
-    return FluentIterable.from(buildResult.getTasks())
-        .transform(buildTask -> buildTask.getPath())
-        .toList();
+    // we can't use buildResult.getTasks() because it ignores skipped tasks
+    return new BufferedReader(new StringReader(buildResult.getOutput())).lines().filter(str -> str.startsWith(":")).map(str -> str.split(" ")[0]).collect(Collectors.toList());
+    //buildResult.getOutput().split();
+    //return buildResult.getTasks().stream().map(BuildTask::getPath).collect(Collectors.toList());
   }
 }
